--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
                 <input type="text" id="textbusca" placeholder="Buscar..."><button>Pesquisar</button>
             </div>
         </header>
-        <h1>Vendo Opala sem motor</h1>
-        <h2>Preço a negociar</h2>
+        <h1>😂👉🐀💎</h1>
+        <h2>Eles são a praga</h2>
         <img src="" width="...px" height="...px">
-        <img src="Opalao.jpg" width="444px" height="444px">
+        <img src="desgraçado.jpg" width="616px" height="444px">
         <footer>
-            "19" 994201237
-            chama no whatzep
+            é meu, eu que lambi   
             <div>
                 <a href="https://www.instagram.com/skull_daay"><button>Instagram Criador</button></a>
             </div>
